--- a/client/main.html
+++ b/client/main.html
@@ -2,26 +2,7 @@
 	<title>yantingspree</title>
 </head>
 <body>
-
-	<div class="navbar navbar-fixed-top">
-		<!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-
-		<a class="navbar-brand" href="/">yantingspree</a>
-		
-		<div class="nav-collapse collapse navbar-responsive-collapse">
-			<ul class="nav navbar-nav">
-
-			</ul>
-
-			{{loginButtons}}
-		</div>
-	</div>
-
+	{{> navbar}}
 
 	<div class="container">
 
