Added Banner Image for merchants +added FaQ pages using sidebar and modals

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-	<title>yantingspree</title>
+	<title>YanTing Spree</title>
 </head>
 <body>
 	{{> navbar}}
@@ -17,9 +17,7 @@
 			</div>
 		</div>
 	</div>
-	
 </body>
-
 
 <template name="welcome">
 	{{> carousel}}
