--- a/client/main.html
+++ b/client/main.html
@@ -3,9 +3,9 @@
 </head>
 <body>
 	{{> navbar}}
-
+	
 	<div class="container">
-
+		{{> meteorMessages}}
 		<div class="row">
 			<div id="sidebar" class="col col-lg-3">
 				{{> sidebar}}
