+preview +scrape +box +spinner

--- a/client/main.html
+++ b/client/main.html
@@ -3,21 +3,7 @@
 
 	<script type="text/javascript">
 	//Uservoice
-	(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/OG7gbzHeWZA0aHl0Wkl7jg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()
-
-	// UserVoice = window.UserVoice || [];
-	// UserVoice.push(['showTab', 'classic_widget', {
-	// 	mode: 'full',
-	// 	primary_color: '#cc6d00',
-	// 	link_color: '#007dbf',
-	// 	default_mode: 'feedback',
-	// 	forum_id: 216186,
-	// 	tab_label: 'Feedback & Support',
-	// 	tab_color: '#6cd1ea',
-	// 	tab_position: 'bottom-right',
-	// 	tab_inverted: false
-	// }]);
-
+	(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/OG7gbzHeWZA0aHl0Wkl7jg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 </script>
 </head>
 <body>
