--- a/client/main.html
+++ b/client/main.html
@@ -12,7 +12,7 @@
 
 			<div id="main-container" class="span9">
 				{{> navbar}}
-				{{> meteorMessages}}
+{{!--				<!-- {{> meteorMessages}} -->--}}
 				{{renderPage}}  
 			</div>
 		</div>
